# netfetch

./: .gitignore  LICENSE  README.md  netfetch.py  pyproject.toml
src/: __main__.py
src/netfetch/: __main__.py
src/netfetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
