[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netfetch"
version = "0.1.0"
authors = [
    { name="Nala", email="email_kamu@example.com" }
]
description = "A blazing fast, dependency-free system fetcher tailored for Linux enthusiasts."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/username_kamu/netfetch"
"Bug Tracker" = "https://github.com/username_kamu/netfetch/issues"

[project.scripts]
netfetch = "netfetch.__main__:main"