[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netfetch-nala"
version = "0.1.0"
authors = [
    { name="NalaGoodman", email="fatannurrizqi@gmail.com" }
]
description = "A blazing fast system fetcher tailored for Linux enthusiasts."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/max-tantan/netfetch"
"Bug Tracker" = "https://github.com/max-tantan/netfetch/issues"

[project.scripts]
netfetch = "netfetch.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
